# BiLite

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 项目需求.md
docs/references/: bilibili-player-prd.md
docs/superpowers/plans/: 2026-05-08-bilite-player.md
docs/superpowers/specs/: 2026-05-08-bilite-player-design.md
src/: audio-panel.ts  audio-prefs.ts  bridge.ts  color-panel.ts  context-menu.ts  draggable.ts  empty-state.ts  index.html  main.ts  player-ui.ts  playlist-panel.ts  progress-bar.ts  settings-panel.ts  shortcuts.ts  speed-panel.ts  state.ts  stats-overlay.ts  subtitle-panel.ts  volume-toast.ts  volume.ts  wizard.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  playlist.rs
src-tauri/src/mpv/: ipc.rs  mod.rs  process.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/storage/: config.rs  database.rs
src/styles/: panels.css  player.css  progress.css  reset.css  theme-dark.css  theme-light.css  variables.css  wizard.css
