[package]
name = "bilite"
version = "0.1.0"
description = "BiLite - A lightweight local video player"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
natord = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
